--- a/deploy.yml
+++ b/deploy.yml
@@ -1,9 +1,9 @@
-name: 🚀 Zstrategies Upload Files to Hostinger via SFTP
+name: 🚀 Upload Files to Hostinger via SFTP
 
 on:
   push:
     branches:
-      - main  # or your deploy branch
+      - main  # Change if your deployment branch is different
 
 jobs:
   sftp-deploy:
@@ -18,7 +18,7 @@ jobs:
         with:
           host: ${{ secrets.FTP_HOST }}
           username: ${{ secrets.FTP_USERNAME }}
-          password: ${{ secrets.FTP_PASSWORD }}  # or use `key:` if SSH key-based
+          password: ${{ secrets.FTP_PASSWORD }}
           port: 22
-          source: "."               # 👈 uploads all repo files
-          target: ${{ secrets.REMOTE_DIR }}  # 👈 your Hostinger path
+          source: "./*"                     # upload everything in repo
+          target: "/var/www/ztrategize-admin"  # Hostinger target path
